--- a/portfolio/.cpanel.yml
+++ b/portfolio/.cpanel.yml
@@ -2,4 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/omgsuc5/public_html/
-    - /bin/cp -R portfolio $DEPLOYPATH
+    - /bin/cp -R src $DEPLOYPATH
+    - /bin/cp -R public $DEPLOYPATH
