--- a/portfolio/cpanel.yml
+++ b/portfolio/cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/omgsuc5/portfolio.omgsuchawholelife.com/public_html/portfolio/
+    - export DEPLOYPATH=/home/omgsuc5/public_html/
     - /bin/cp -r * $DEPLOYPATH
