--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://MarciaAdler.github.io/ReactPortfolio",
+  "homepage": "https://portfolio.omgsuchawholelife.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
