updated homepage link and put it back to github

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://portfolio.omgsuchawholelife.com",
+  "homepage": "https://marciaadler.github.io/ReactPortfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
